--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
 				<h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Parents</a></li>
-						<li><a href="elements.html">Coaches</a></li>
+						<li><a href="index.html">Introduction</a></li>
+						<li><a href="generic.html">Resources</a></li>
+						<li><a href="elements.html">Conclusion</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Banner -->
+
 			<section id="banner">
 				<h2>Spatial</h2>
 				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
@@ -44,7 +45,31 @@
 				</ul>
 			</section>
 
+
+				<section id="main" class="wrapper">
+					<div class="container">
+
+						<header class="major special">
+							<h2>Introduction</h2>
+							<p>Begin thinking about how to help your child develop as an athlete.</p>
+						</header>
+
+						<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+						<p>Introduction</p>
+
+					 	<p>When you are a developing youth athlete, there are a lot of factors that can influence your improvement and overall performance in a sport. There are the intrinsic motivations to play a sport, the social aspects, the team dynamic, the coaching style, and so much more that go into overall performance and development of skills. While there are countless programs and resources with information on how to refine skills through drills, how to improve your focus and motivation, on how coaches should effectively teach athletes, among others, there is a lack of resources for a major outside influence on an athlete; the parents’ behavior. </p>
+
+						<p>Specifically in youth sport, parental influences can play a huge part into how an athlete directly performs, how they generally develop, or their overall feelings on the sport. Many researchers believe parental behavior is very important because parents hold the unique position in the sports arena where they can provide immediate and specific feedback, as well as have a significant influence on their children (positive or negative) (Holt 1). One can really trace how a parent’s comments, actions, or general involvement can affect a number of factors that influence performance such as self-perception or motivation to name a few. If parental behavior can have such an effect on sport performance, why is it that there are not that many resources for parents (or for coaches to give to parents, for example) to be well informed on how to behave in an effective manner? If parents were more knowledgeable about the part they play on their child’s athletic performance, this could help control for an otherwise external factor.</p>
+
+						<p>After researching the specific impact parents have on their adolescent athletes, it’s become clear that there are many positive impacts parents can have that would be best emphasized, as well many (often times inadvertent) negative impacts that should be eliminated. Because of this, we felt it best to make a website to provide information on the different effects of parental behavior on an athlete’s performance, due to influences on factors like self-perception. A website is easily distributed and has the ability to reach many people in a quick and efficient manner. The demographic focused on is primarily adolescent athletes that are high school age, or approaching high school age. This is mostly because that is still an age where parental involvement is still a major factor (as opposed to a college athlete) and athletes are start reaching more competitive levels.</p>
+
+						<p>The purpose is to inform parents, coaches, and athletes alike how parental behavior can influence performance, as well as advising parents on how to behave in a manner that is beneficial for their child. There are a number of studies supporting the theory of how much parents ostensibly can influence an athlete, the specific ways in which they do, and the possible implications of this. These sources were used to back up the advice and information provided on the website, and they hope to be utilized in a way to change how parents think about their actions at their child’s next sporting event.</p>
+
+					</div>
+				</section>
+
 			<!-- One -->
+			<!---
 				<section id="one" class="wrapper style1">
 					<div class="container 75%">
 						<div class="row 200%">
@@ -61,33 +86,29 @@
 						</div>
 					</div>
 				</section>
+			-->
 
 			<!-- Two -->
-				<section id="two" class="wrapper style2 special">
-					<div class="container">
-						<header class="major">
-							<h2>Fusce ultrices fringilla</h2>
-							<p>Maecenas vitae tellus feugiat eleifend</p>
-						</header>
-						<div class="row 150%">
-							<div class="6u 12u$(xsmall)">
-								<div class="image fit captioned">
-									<img src="images/pic02.jpg" alt="" />
-									<h3>Lorem ipsum dolor sit amet.</h3>
-								</div>
-							</div>
-							<div class="6u$ 12u$(xsmall)">
-								<div class="image fit captioned">
-									<img src="images/pic03.jpg" alt="" />
-									<h3>Illum, maiores tempora cupid?</h3>
-								</div>
-							</div>
+				<section id="two" class="wrapper style2 left-special">
+					<section id="main" class="wrapper">
+						<div class="container">
+
+							<header class="major special">
+								<h2>Generic</h2>
+								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+							</header>
+
+							<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+							<p>Youth Hockey’s Perceptions of Parental Involvement
+							<p>Ede, Kampoff, et al.
+ 
+        					<p>Ede, Kampoff, et al conducted a study delving into youth athletes’ perceptions in parental involvement of their athletic activity and their perception of how much it actually influences their performance. The main purpose of the study was to see what players were satisfied with and what they weren’t.  This intrinsically acknowledges that there is a real and perceived effect of parental involvement and behavior on personal sport performance, supporting the theory that it is an environmental factor that can have large implications on self-perception, motivation, enjoyment, and more when it comes to performance. Additionally, it was mentioned that researchers found “children’s perceptions of their parents involvement are predictive of the child’s sustained improvement in sport” showing the implications of athletes perception of their parents involvement (Ede et al. 6).</p>
+        					
+        					<p>Participants of the study included young high school age athletes (13-15 year olds) that participated in club ice hockey. After an extensive questionnaire, the athletes reported positive perceived effects when their parents’ actions were supportive, understanding, and included praise. They were so positive, they in fact reported preferring more rather than less involvement if it was in this supportive nature. Some participants cited feelings of making their parents proud and feeling their support by their involvement (watching games, going to practices, enjoying the sport as well) as motivators to perform better. Parental understanding also had a positive effect on coping mechanisms and positive outlooks on setbacks.</p>
+
+        					<p>However, the athletes also reported negative effects and dissatisfaction when their parents’ actions were directive or actively involved. This many times created feelings of annoyance or frustration, as well as additional pressure, on performance when parents tried to ‘sideline coach’.  While their parents involvement did not have any implications on their enjoyment of the sport (i.e. an enthusiastic parent can’t make an unenthusiastic child like a sport), there were reports of dissatisfaction and negative implications of the overly involved, directive parent. This can relate to the Expectation-Performance model, or the ‘self-fulfilling prophecy’ model. While this typically relates to coaching, parental comments or participation, or how they interact/treat their child in the athletic environment can affect the athlete’s self-perceptions, especially at a younger age when still developing skills.</p>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button special big">Nulla luctus</a></li>
-							<li><a href="#" class="button big">Sed vulputate</a></li>
-						</ul>
-					</div>
+					</section>
 				</section>
 
 			<!-- Three -->
@@ -97,48 +118,22 @@
 							<h2>Mauris vulputate dolor</h2>
 							<p>Feugiat sed lorem ipsum magna</p>
 						</header>
-						<div class="feature-grid">
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Lorem ipsum</h4>
-										<p>Lorem ipsum dolor sit</p>
-									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Recusandae nemo</h4>
-										<p>Ratione maiores a, commodi</p>
-									</header>
-									<p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Laudantium fugit</h4>
-										<p>Possimus ex reprehenderit eaque</p>
-									</header>
-									<p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-								</div>
-							</div>
-							<div class="feature">
-								<div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-								<div class="content">
-									<header>
-										<h4>Porro aliquam</h4>
-										<p>Quaerat, excepturi eveniet laboriosam</p>
-									</header>
-									<p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
-								</div>
-							</div>
+						<section id="main" class="wrapper">
+						<div class="container">
+
+							<header class="major special">
+								<h2>Generic</h2>
+								<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+							</header>
+
+							<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+							<p>Parental Involvement in Youth Soccer Holt et al</p>
+        					<p>Holt et al conducted a study on families involved in youth soccer to observe the different types of parental behavior and their effects on performance for young teenagers. The study included interviews of the family and audio recordings of soccer games. The researchers labeled parental action on a range from supportive to critical and also observed that parents had a perception that they knew more about the sport than the child, so this warranted specific feedback.</p>
+        					<p>Holt et al observed encouragement as the most prevalent form of feedback, with comments like “good hustle” or “keep up the good work” in addition to loud cheering and obvious engagement. In response, there was a general improvement in children’s performance. Even when some of the encouraging comments included specific instructions for improvement (as was the case with one father), the athletes responded well to the specific encouragement and information as well.</p>
+        					<p>Overall, they found that striking a balance between the instructional and the encouraging had the best effect on athletes. While being too instructional could have little immediate impact on performance, pointers here and there could help improve performance. While negative comment weren’t as prevalent, they did happen, which showed a noticeable negative impact on performance. Derogatory comments were occasionally observed, although they were mostly directed towards the other teams players. Much of the involvement and comments in general created an ‘emotionally intense’ environment, which impacted different athletes in different ways. This could be perceived as an external stimulus that serves as an attentional problem that can inhibit the concentration and focus necessary for high performance, as Baltzell, McCarthy, and Greenbaum discuss. One of the main things to take away from all of the observational data is that the relationships between parent and athlete that were more reciprocal and bi-directional (effective communication between the two parties) were the most effective since parents could act on how their child performs and is motivated best.</p>
 						</div>
+					</section>
+
 					</div>
 				</section>
 
